CB-26163: [core - provision/termination] Create, update, delete userdata secrets; update KMS key policies
- Add `userdataSecretResourceId` field to `InstanceMetaData` and `ArchivedInstanceMetaData`
- For the stack creation flow:
  - Update `CREATE_USER_DATA_STATE`, to:
    - Create userdata secrets for the stack
    - Assign the created secrets to the instances
    - Update the resource policy of the Cloud Secret Manager KMS key to include the newly created secrets in its cryptographic authorized clients list
  - Add `UPDATE_USERDATA_SECRETS_STATE`, in which:
    - Update the resource policy of the LUKS KMS key to include the instances of the stack in its cryptographic authorized clients list
    - Update the resource policy, value and KMS key of the secrets of the stack
- For the stack termination flow:
  - Add `DELETE_USERDATA_SECRETS_STATE`, in which:
    - Delete all userdata secrets of the stack

This commit does not contain secrets